--- a/sample/package.json
+++ b/sample/package.json
@@ -16,6 +16,7 @@
         "@fortawesome/fontawesome-free":   "5.12.1",
         "mousetrap":                       "1.6.5",
         "animejs":                         "3.1.0",
+        "runejs":                          "rse/runejs#1.1.8",
         "vivus":                           "0.4.5"
     }
 }
