--- a/sample/package.json
+++ b/sample/package.json
@@ -13,6 +13,7 @@
         "http-vue-loader":                 "1.4.2",
         "less":                            "3.11.1",
         "@fortawesome/fontawesome-free":   "5.12.1",
+        "typopro-web":                     "4.2.3",
         "mousetrap":                       "1.6.5",
         "animejs":                         "3.1.0",
         "runejs":                          "rse/runejs#1.1.8",
