--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
         "ws":                         "7.2.3",
         "yargs":                      "15.3.1",
         "chalk":                      "3.0.0",
+        "js-yaml":                    "3.13.1",
         "eventemitter3":              "4.0.0",
         "reconnecting-websocket":     "4.4.0"
     },
     "scripts": {
         "prepublishOnly":             "grunt default",
         "build":                      "grunt default",
-        "start":                      "node src/huds-server.js -U sample -P sample -d sample:./sample"
+        "start":                      "node src/huds-server.js -U sample -P sample -d sample:./sample,./sample.yaml"
     }
 }
