--- a/sample/package.json
+++ b/sample/package.json
@@ -1,6 +1,6 @@
 {
-    "name":                                "sample",
-    "description":                         "Sample HUD",
+    "name":                                "huds-hud-hello",
+    "description":                         "Hello World HUD",
     "version":                             "0.0.0",
     "author": {
         "name":                            "Dr. Ralf S. Engelschall",
@@ -11,17 +11,7 @@
     "dependencies": {
         "vue":                             "2.6.11",
         "http-vue-loader":                 "1.4.2",
-        "less":                            "3.11.1",
-        "@fortawesome/fontawesome-free":   "5.12.1",
-        "typopro-web":                     "4.2.3",
         "mousetrap":                       "1.6.5",
-        "animejs":                         "3.1.0",
-        "@svgdotjs/svg.js":                "3.0.16",
-        "@svgdotjs/svg.filter.js":         "3.0.7",
-        "svg.easing.js":                   "2.0.0",
-        "svg.screenbbox.js":               "0.1.2",
-        "svg.path.js":                     "otm/svg.path.js#6981166",
-        "runejs":                          "rse/runejs#1.1.8",
-        "vivus":                           "0.4.5"
+        "animejs":                         "3.1.0"
     }
 }
