externalize hello world HUD

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "license":                        "MIT",
     "main":                           "src/huds-server.js",
     "browser":                        "dst/huds-client.js",
+    "bin": {
+        "huds":                       "src/huds-server.js"
+    },
     "devDependencies": {
         "grunt":                      "1.1.0",
         "grunt-cli":                  "1.3.2",
@@ -49,7 +52,6 @@
     },
     "scripts": {
         "prepublishOnly":             "grunt default",
-        "build":                      "grunt default",
-        "start":                      "node src/huds-server.js -a 0.0.0.0 -p 9999 -U sample -P sample -d sample:sample,sample/sample.yaml"
+        "build":                      "grunt default"
     }
 }
