--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     },
     "scripts": {
         "prepublishOnly":             "grunt default",
-        "build":                      "grunt default"
+        "build":                      "grunt default",
+        "huds":                       "node src/huds-server.js"
     }
 }
