--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "eslint-config-standard":     "14.1.1",
         "eslint-plugin-standard":     "4.0.1",
         "eslint-plugin-promise":      "4.2.1",
-        "eslint-plugin-import":       "2.20.1",
+        "eslint-plugin-import":       "2.20.2",
         "eslint-plugin-node":         "11.1.0",
         "babelify":                   "10.0.0",
         "@babel/preset-env":          "7.9.0",
@@ -46,6 +46,7 @@
         "ws":                         "7.2.3",
         "yargs":                      "15.3.1",
         "chalk":                      "3.0.0",
+        "resolve":                    "1.15.1",
         "js-yaml":                    "3.13.1",
         "eventemitter3":              "4.0.0",
         "reconnecting-websocket":     "4.4.0"
