--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "resolve":                    "1.15.1",
         "js-yaml":                    "3.13.1",
         "eventemitter3":              "4.0.0",
+        "micromatch":                 "4.0.2",
         "reconnecting-websocket":     "4.4.0"
     },
     "scripts": {
