--- a/package.json
+++ b/package.json
@@ -18,34 +18,35 @@
     "bin": {
         "huds":                       "src/huds-server.js"
     },
+    "upd":                            [ "!eslint", "!chalk" ],
     "devDependencies": {
         "grunt":                      "1.4.1",
         "grunt-cli":                  "1.4.3",
         "grunt-contrib-clean":        "2.0.0",
         "grunt-browserify":           "6.0.0",
-        "grunt-eslint":               "23.0.0",
+        "grunt-eslint":               "24.0.0",
         "babel-eslint":               "10.1.0",
-        "@babel/core":                "7.15.5",
+        "@babel/core":                "7.16.0",
         "eslint":                     "7.32.0",
         "eslint-config-standard":     "16.0.3",
-        "eslint-plugin-import":       "2.24.2",
+        "eslint-plugin-import":       "2.25.3",
         "eslint-plugin-node":         "11.1.0",
         "babelify":                   "10.0.0",
-        "@babel/preset-env":          "7.15.6",
+        "@babel/preset-env":          "7.16.4",
         "uglifyify":                  "5.0.2",
         "browserify-header":          "1.1.0",
         "browserify-derequire":       "1.1.1"
     },
     "dependencies": {
-        "@hapi/hapi":                 "20.2.0",
+        "@hapi/hapi":                 "20.2.1",
         "@hapi/inert":                "6.0.4",
         "@hapi/boom":                 "9.1.4",
         "@hapi/basic":                "6.0.0",
-        "hapi-plugin-websocket":      "2.3.5",
+        "hapi-plugin-websocket":      "2.3.7",
         "hapi-plugin-traffic":        "1.1.4",
         "hapi-plugin-header":         "1.1.4",
         "moment":                     "2.29.1",
-        "ws":                         "8.2.3",
+        "ws":                         "8.3.0",
         "yargs":                      "17.2.1",
         "chalk":                      "4.1.2",
         "resolve":                    "1.20.0",
