--- a/package.json
+++ b/package.json
@@ -18,17 +18,15 @@
     "bin": {
         "huds":                       "src/huds-server.js"
     },
-    "upd":                            [ "!eslint", "!chalk" ],
+    "upd":                            [ "!chalk" ],
     "devDependencies": {
         "grunt":                      "1.4.1",
         "grunt-cli":                  "1.4.3",
         "grunt-contrib-clean":        "2.0.0",
         "grunt-browserify":           "6.0.0",
         "grunt-eslint":               "24.0.0",
-        "babel-eslint":               "10.1.0",
-        "@babel/core":                "7.17.8",
-        "eslint":                     "7.32.0",
-        "eslint-config-standard":     "16.0.3",
+        "eslint":                     "8.12.0",
+        "eslint-config-standard":     "17.0.0-1",
         "eslint-plugin-import":       "2.25.4",
         "eslint-plugin-node":         "11.1.0",
         "babelify":                   "10.0.0",
