--- a/package.json
+++ b/package.json
@@ -20,32 +20,32 @@
     },
     "upd":                            [ "!chalk" ],
     "devDependencies": {
-        "grunt":                      "1.4.1",
+        "grunt":                      "1.5.3",
         "grunt-cli":                  "1.4.3",
-        "grunt-contrib-clean":        "2.0.0",
+        "grunt-contrib-clean":        "2.0.1",
         "grunt-browserify":           "6.0.0",
         "grunt-eslint":               "24.0.0",
-        "eslint":                     "8.12.0",
-        "eslint-config-standard":     "17.0.0-1",
-        "eslint-plugin-import":       "2.25.4",
+        "eslint":                     "8.16.0",
+        "eslint-config-standard":     "17.0.0",
+        "eslint-plugin-import":       "2.26.0",
         "eslint-plugin-node":         "11.1.0",
         "babelify":                   "10.0.0",
-        "@babel/preset-env":          "7.16.11",
+        "@babel/preset-env":          "7.18.2",
         "uglifyify":                  "5.0.2",
         "browserify-header":          "1.1.0",
         "browserify-derequire":       "1.1.1"
     },
     "dependencies": {
-        "@hapi/hapi":                 "20.2.1",
+        "@hapi/hapi":                 "20.2.2",
         "@hapi/inert":                "6.0.5",
-        "@hapi/boom":                 "9.1.4",
+        "@hapi/boom":                 "10.0.0",
         "@hapi/basic":                "6.0.0",
-        "hapi-plugin-websocket":      "2.3.7",
+        "hapi-plugin-websocket":      "2.3.8",
         "hapi-plugin-traffic":        "1.1.4",
         "hapi-plugin-header":         "1.1.4",
-        "moment":                     "2.29.1",
-        "ws":                         "8.5.0",
-        "yargs":                      "17.4.0",
+        "moment":                     "2.29.3",
+        "ws":                         "8.7.0",
+        "yargs":                      "17.5.1",
         "chalk":                      "4.1.2",
         "resolve":                    "1.22.0",
         "js-yaml":                    "4.1.0",
