--- a/package.json
+++ b/package.json
@@ -1,66 +1,68 @@
 {
-    "name":                           "huds",
-    "version":                        "2.1.1",
-    "homepage":                       "https://github.com/rse/huds",
-    "description":                    "Head-Up-Display Server (HUDS)",
+    "name":                                "huds",
+    "version":                             "2.1.1",
+    "homepage":                            "https://github.com/rse/huds",
+    "description":                         "Head-Up-Display Server (HUDS)",
     "author": {
-        "name":                       "Dr. Ralf S. Engelschall",
-        "email":                      "rse@engelschall.com",
-        "url":                        "http://engelschall.com"
+        "name":                            "Dr. Ralf S. Engelschall",
+        "email":                           "rse@engelschall.com",
+        "url":                             "http://engelschall.com"
     },
-    "license":                        "MIT",
+    "license":                             "MIT",
     "repository": {
-        "type":                       "git",
-        "url":                        "git+https://github.com/rse/huds.git"
+        "type":                            "git",
+        "url":                             "git+https://github.com/rse/huds.git"
     },
-    "browser":                        "dst/huds-client.js",
-    "main":                           "src/huds-server-api.js",
+    "browser":                             "dst/huds-client.js",
+    "main":                                "src/huds-server-api.js",
     "bin": {
-        "huds":                       "src/huds-server-cli.js"
+        "huds":                            "src/huds-server-cli.js"
     },
-    "upd":                            [ "!chalk" ],
+    "upd":                                 [ "!chalk" ],
     "devDependencies": {
-        "grunt":                      "1.6.1",
-        "grunt-cli":                  "1.4.3",
-        "grunt-contrib-clean":        "2.0.1",
-        "grunt-browserify":           "6.0.0",
-        "grunt-eslint":               "24.3.0",
-        "eslint":                     "8.56.0",
-        "eslint-config-standard":     "17.1.0",
-        "eslint-plugin-import":       "2.29.1",
-        "eslint-plugin-node":         "11.1.0",
-        "babelify":                   "10.0.0",
-        "@babel/preset-env":          "7.23.8",
-        "uglifyify":                  "5.0.2",
-        "browserify-header":          "1.1.0",
-        "browserify-derequire":       "1.1.1"
+        "grunt":                           "1.6.1",
+        "grunt-cli":                       "1.4.3",
+        "grunt-contrib-clean":             "2.0.1",
+        "grunt-browserify":                "6.0.0",
+        "grunt-eslint":                    "24.3.0",
+        "eslint":                          "8.56.0",
+        "eslint-config-standard":          "17.1.0",
+        "eslint-plugin-import":            "2.29.1",
+        "eslint-plugin-node":              "11.1.0",
+        "babelify":                        "10.0.0",
+        "@babel/preset-env":               "7.23.8",
+        "@babel/plugin-transform-runtime": "7.23.7",
+        "uglifyify":                       "5.0.2",
+        "browserify-header":               "1.1.0",
+        "browserify-derequire":            "1.1.1"
     },
     "dependencies": {
-        "@hapi/hapi":                 "21.3.2",
-        "@hapi/inert":                "7.1.0",
-        "@hapi/boom":                 "10.0.1",
-        "@hapi/basic":                "7.0.2",
-        "hapi-plugin-websocket":      "2.4.8",
-        "hapi-plugin-traffic":        "1.1.8",
-        "hapi-plugin-header":         "1.1.8",
-        "moment":                     "2.30.1",
-        "ws":                         "8.16.0",
-        "yargs":                      "17.7.2",
-        "chalk":                      "4.1.2",
-        "resolve":                    "1.22.8",
-        "js-yaml":                    "4.1.0",
-        "eventemitter3":              "5.0.1",
-        "latching":                   "1.1.2",
-        "micromatch":                 "4.0.5",
-        "mixin-deep":                 "2.0.1",
-        "reconnecting-websocket":     "4.4.0",
-        "async-mqtt":                 "2.6.3",
-        "write-file-atomic":          "5.0.1",
-        "axios":                      "1.6.5"
+        "@hapi/hapi":                      "21.3.2",
+        "@hapi/inert":                     "7.1.0",
+        "@hapi/boom":                      "10.0.1",
+        "@hapi/basic":                     "7.0.2",
+        "hapi-plugin-websocket":           "2.4.8",
+        "hapi-plugin-traffic":             "1.1.8",
+        "hapi-plugin-header":              "1.1.8",
+        "moment":                          "2.30.1",
+        "ws":                              "8.16.0",
+        "yargs":                           "17.7.2",
+        "chalk":                           "4.1.2",
+        "resolve":                         "1.22.8",
+        "js-yaml":                         "4.1.0",
+        "eventemitter3":                   "5.0.1",
+        "latching":                        "1.1.2",
+        "micromatch":                      "4.0.5",
+        "mixin-deep":                      "2.0.1",
+        "reconnecting-websocket":          "4.4.0",
+        "async-mqtt":                      "2.6.3",
+        "write-file-atomic":               "5.0.1",
+        "axios":                           "1.6.5",
+        "@babel/runtime":                  "7.23.8"
     },
     "scripts": {
-        "prepublishOnly":             "grunt default",
-        "build":                      "grunt default",
-        "huds":                       "node src/huds-server-cli.js"
+        "prepublishOnly":                  "grunt default",
+        "build":                           "grunt default",
+        "huds":                            "node src/huds-server-cli.js"
     }
 }
