update to new more stable variant of the package

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "grunt-eslint":                    "24.3.0",
         "eslint":                          "8.57.0",
         "eslint-config-standard":          "17.1.0",
-        "eslint-plugin-import":            "2.29.1",
+        "eslint-plugin-import":            "2.30.0",
         "eslint-plugin-node":              "11.1.0",
         "babelify":                        "10.0.0",
         "@babel/preset-env":               "7.25.4",
@@ -54,7 +54,7 @@
         "latching":                        "1.1.2",
         "micromatch":                      "4.0.8",
         "mixin-deep":                      "2.0.1",
-        "reconnecting-websocket":          "4.4.0",
+        "@opensumi/reconnecting-websocket": "4.4.0",
         "async-mqtt":                      "2.6.3",
         "write-file-atomic":               "5.0.1",
         "axios":                           "1.7.7",
