upgrade from ESLint 8 to ESLint 9

--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
         "grunt-cli":                        "1.5.0",
         "grunt-contrib-clean":              "2.0.1",
         "grunt-browserify":                 "6.0.0",
-        "grunt-eslint":                     "24.3.0",
-        "eslint":                           "8.57.0",
-        "eslint-config-standard":           "17.1.0",
-        "eslint-plugin-import":             "2.31.0",
-        "eslint-plugin-node":               "11.1.0",
+        "grunt-eslint":                     "26.0.0",
+        "eslint":                           "9.37.0",
+        "@eslint/js":                       "9.37.0",
+        "globals":                          "16.4.0",
+        "eslint-plugin-import":             "2.32.0",
+        "eslint-plugin-n":                  "17.23.1",
         "babelify":                         "10.0.0",
         "@babel/preset-env":                "7.28.3",
         "@babel/plugin-transform-runtime":  "7.28.3",
